Fix z-index

--- a/src/app/square-list/square-navigation/square-navigation.component.scss
+++ b/src/app/square-list/square-navigation/square-navigation.component.scss
@@ -1,4 +1,5 @@
 square-navigation {
+    @extend .z-9;
     @each $var in ('previous', 'next') {
         .#{$var} {
             opacity: 1;
